--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       // --- Recursos ---
       const resources = [
         // Vagner Bom Jesus Apps e Projetos
-        { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Aplicação oficial na Play Store', link: 'https://play.google.com/store/apps/details?id=pt.tbdb.bjtech&pli=1' },
+        { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Aplicação oficial na Play Store', link: 'https://apkpure.com/th/t-b-d-b/pt.tbdb.bjtech/' },
         { title: '🌿 The Biomimicry Database', desc: 'Plataforma multimodal para biomimética', link: 'https://thebiomimicrydb.vercel.app/' },
         { title: '📝 Blog no Medium', desc: 'Artigos técnicos e científicos', link: 'https://vagnerbomjesus.medium.com/' },
         { title: '🤖 TBDB | ChatBot VITA', desc: 'Documentação do Desenvolvimento de uma Plataforma Multimodal para Partilha de Conhecimento ...', link: 'https://bdigital.ipg.pt/dspace/bitstream/10314/10107/1/CM%20-%20Vagner%20B%20Jesus.pdf' },
