--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
       border: 1.5px solid #b6cffb;
       box-shadow: 0 2px 16px #d8e7fd77;
     }
+    .section-title {
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin: 18px 0 10px;
+    }
+
 
     .pagination-custom {
       display: flex;
@@ -292,6 +298,10 @@
     body.dark-mode .resource-desc {
       color: #a0aec8;
     }
+    body.dark-mode .section-title {
+      color: #f3f6f9;
+    }
+
 
     body.dark-mode .resource-link:hover .resource-card {
       background: #191a22 !important;
@@ -385,31 +395,37 @@
       const savedLang = localStorage.getItem('lang') || 'en';
       // --- Recursos ---
       const resourcesData = {
-        en: [
-          // Vagner Bom Jesus Apps e Projetos
-          { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Official APK', link: 'https://apkpure.com/th/t-b-d-b/pt.tbdb.bjtech/' },
-          { title: '🌿 The Biomimicry Database', desc: 'Multimodal platform for biomimicry', link: 'https://thebiomimicrydb.vercel.app/' },
-          { title: '📝 Blog on Medium', desc: 'Technical and scientific articles', link: 'https://vagnerbomjesus.medium.com/' },
-          { title: '🤖 TBDB | VITA ChatBot', desc: 'Development documentation of a multimodal knowledge sharing platform ...', link: 'https://bdigital.ipg.pt/dspace/bitstream/10314/10107/1/CM%20-%20Vagner%20B%20Jesus.pdf' },
-          { title: '🔎 Google Scholar', desc: 'Academic publications', link: 'https://scholar.google.com/citations?user=K-IfdJoAAAAJ&hl=pt-PT&oi=ao' },
-          // Useful Links
-          { title: '🌐 ENISA - European Union Agency for Cybersecurity', desc: 'Official ENISA website', link: 'https://www.enisa.europa.eu/' }
-        ],
-        pt: [
-          // Vagner Bom Jesus Apps e Projetos
-          { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Aplicação oficial APK', link: 'https://apkpure.com/th/t-b-d-b/pt.tbdb.bjtech/' },
-          { title: '🌿 The Biomimicry Database', desc: 'Plataforma multimodal para biomimética', link: 'https://thebiomimicrydb.vercel.app/' },
-          { title: '📝 Blog no Medium', desc: 'Artigos técnicos e científicos', link: 'https://vagnerbomjesus.medium.com/' },
-          { title: '🤖 TBDB | ChatBot VITA', desc: 'Documentação do Desenvolvimento de uma Plataforma Multimodal para Partilha de Conhecimento ...', link: 'https://bdigital.ipg.pt/dspace/bitstream/10314/10107/1/CM%20-%20Vagner%20B%20Jesus.pdf' },
-          { title: '🔎 Google Scholar', desc: 'Publicações académicas', link: 'https://scholar.google.com/citations?user=K-IfdJoAAAAJ&hl=pt-PT&oi=ao' },
-          // Links Úteis
-          { title: '🌐 ENISA - Agência da União Europeia para a Cibersegurança', desc: 'Website oficial da ENISA', link: 'https://www.enisa.europa.eu/' }
-        ]
+        en: {
+          projects: [
+            { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Official APK', link: 'https://apkpure.com/th/t-b-d-b/pt.tbdb.bjtech/' },
+            { title: '🌿 The Biomimicry Database', desc: 'Multimodal platform for biomimicry', link: 'https://thebiomimicrydb.vercel.app/' },
+            { title: '📝 Blog on Medium', desc: 'Technical and scientific articles', link: 'https://vagnerbomjesus.medium.com/' },
+            { title: '🤖 TBDB | VITA ChatBot', desc: 'Development documentation of a multimodal knowledge sharing platform ...', link: 'https://bdigital.ipg.pt/dspace/bitstream/10314/10107/1/CM%20-%20Vagner%20B%20Jesus.pdf' },
+            { title: '🔎 Google Scholar', desc: 'Academic publications', link: 'https://scholar.google.com/citations?user=K-IfdJoAAAAJ&hl=pt-PT&oi=ao' }
+          ],
+          useful: [
+            { title: '🌐 ENISA - European Union Agency for Cybersecurity', desc: 'Official ENISA website', link: 'https://www.enisa.europa.eu/' }
+          ]
+        },
+        pt: {
+          projects: [
+            { title: '📱 TBDB - The Biomimicry Database (Android)', desc: 'Aplicação oficial APK', link: 'https://apkpure.com/th/t-b-d-b/pt.tbdb.bjtech/' },
+            { title: '🌿 The Biomimicry Database', desc: 'Plataforma multimodal para biomimética', link: 'https://thebiomimicrydb.vercel.app/' },
+            { title: '📝 Blog no Medium', desc: 'Artigos técnicos e científicos', link: 'https://vagnerbomjesus.medium.com/' },
+            { title: '🤖 TBDB | ChatBot VITA', desc: 'Documentação do Desenvolvimento de uma Plataforma Multimodal para Partilha de Conhecimento ...', link: 'https://bdigital.ipg.pt/dspace/bitstream/10314/10107/1/CM%20-%20Vagner%20B%20Jesus.pdf' },
+            { title: '🔎 Google Scholar', desc: 'Publicações académicas', link: 'https://scholar.google.com/citations?user=K-IfdJoAAAAJ&hl=pt-PT&oi=ao' }
+          ],
+          useful: [
+            { title: '🌐 ENISA - Agência da União Europeia para a Cibersegurança', desc: 'Website oficial da ENISA', link: 'https://www.enisa.europa.eu/' }
+          ]
+        }
       };
       const translations = {
         en: {
           experience: 'Experience',
           education: 'Education',
+          projects: 'Projects',
+          useful: 'Useful Links',
           prev: 'Previous',
           next: 'Next',
           page: (c, t) => `Page ${c} of ${t}`
@@ -417,6 +433,8 @@
         pt: {
           experience: 'Experiência',
           education: 'Formação académica',
+          projects: 'Projetos',
+          useful: 'Links úteis',
           prev: 'Anterior',
           next: 'Próxima',
           page: (c, t) => `Página ${c} de ${t}`
@@ -427,16 +445,20 @@
       const btnEdu = document.getElementById('btn-education');
 
       let currentLanguage = 'en';
-      let resources = resourcesData[currentLanguage];
+      let resources = [];
       const perPage = 5;
       let currentPage = 1;
-      let totalPages = Math.ceil(resources.length / perPage);
+      let totalPages = 1;
 
       function setLanguage(lang) {
         currentLanguage = lang;
         langSelect.value = lang;
         localStorage.setItem('lang', lang);
-        resources = resourcesData[lang];
+        const data = resourcesData[lang];
+        resources = [
+          ...data.projects.map(r => ({ ...r, category: 'projects' })),
+          ...data.useful.map(r => ({ ...r, category: 'useful' }))
+        ];
         totalPages = Math.ceil(resources.length / perPage);
         btnExp.textContent = translations[lang].experience;
         btnEdu.textContent = translations[lang].education;
@@ -449,10 +471,19 @@
       function renderResources(page) {
         const section = document.getElementById('resources-section');
         section.querySelectorAll('.resource-link').forEach(e => e.remove());
+        section.querySelectorAll('.section-title').forEach(e => e.remove());
         const start = (page - 1) * perPage;
         const end = Math.min(start + perPage, resources.length);
+        let currentCat = null;
         for (let i = start; i < end; i++) {
           const r = resources[i];
+          if (r.category !== currentCat) {
+            currentCat = r.category;
+            const h = document.createElement('h2');
+            h.className = 'section-title';
+            h.textContent = translations[currentLanguage][currentCat];
+            section.insertBefore(h, section.querySelector('.pagination-custom'));
+          }
           const a = document.createElement('a');
           a.href = r.link;
           a.target = '_blank';
